--- a/index_solucoes.html
+++ b/index_solucoes.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>EcoVision</title>
     <link rel="stylesheet" href="style_solucoes.css">
 </head>
 <body>
@@ -14,26 +14,26 @@
     </header>
     <div class="problemas">
         <div class="problemas_title">
-            problemas
+            Problemas
         </div>
     </div>
     <div class=" objetivos">
         <div class="objetivos_title">
-            objetivos
+            Objetivos
 
         </div>
 
     </div>
     <div class="solucoes">
         <div class="solucoes_title">
-            solucoes
+            Solucoes
 
         </div>
 
     </div>
     <div class="contribuicoes">
         <div class="contribuicoes_title">
-            contribuicoes
+            Contribuicoes
 
         </div>
 
