--- a/index_solucoes.html
+++ b/index_solucoes.html
@@ -19,9 +19,9 @@
     </div>
     <div class=" objetivos">
         <div class="objetivos_title">
-            Objetivos
-
-        </div>
+            Objetivos <br>
+          </div>
+          <p class="texto"> Nós temos uma visâo visando um mundo mais ecológico e sustentável. Buscamos que nossos projetos e metas sejam colocadas em práticas </p>
 
     </div>
     <div class="solucoes">
@@ -39,9 +39,8 @@
 
     </div>
     <div class="footer">
-        <footer>
 
-        </footer>
+        
     </div>
 </body>
 </html>
