--- a/index_solucoes.html
+++ b/index_solucoes.html
@@ -21,7 +21,7 @@
         <div class="objetivos_title">
             Objetivos <br>
           </div>
-          <p class="texto"> Nós temos uma visâo visando um mundo mais ecológico e sustentável. Buscamos que nossos projetos e metas sejam colocadas em práticas </p>
+          <p class="texto"> Nós temos uma visão visando um mundo mais ecológico e sustentável. Buscamos que nossos projetos e metas sejam colocadas em práticas e bem-sucedidas </p>
 
     </div>
     <div class="solucoes">
